# CTImageReconstruction

./: .gitignore  README.md
2DReconstruction/: CMakeLists.txt  main.cpp
2DReconstruction/2d_images_bin/: sphere-tori-setting.txt
2DReconstruction/reconstruction/: CMakeLists.txt  params.h
2d_image_reconstruction/: CMakeLists.txt  main.cpp
2d_image_reconstruction/2d_images_bin/: elephant-setting.txt
2d_image_reconstruction/reconstruction/: params.h  reconst2d.cpp  reconst2d.h
3DReconstruction/: CMakeLists.txt  main.cpp
3DReconstruction/reconstruction/: CMakeLists.txt  Geomertry_GPU.cuh  Geometry.h  Geometry_GPU.cu  Geometry_GPU.cuh  MLEM.cpp  MLEM.h  MLEM_GPU.cu  MLEM_GPU.cuh  Params.h  Utils.h  Volume.h
3DReconstruction/util/: CMakeLists.txt  Params.h  Pbar.h  Utils.h  Volume.h
